crates/solidity-v2/testing/snapshots/diagnostics_output/semantic/constant_cycles/constants/qualified_self_reference_cycle/generated/slang/0.8.0-failure.txt
# This file is generated automatically by infrastructure scripts. Please don't edit by hand.

Diagnostics: 1

Error: The value of the constant A has a cyclic dependency via A.
   ╭─[input.sol:5:5]
   │
 5 │     uint256 internal constant A = B.A;
   │     ─────────────────┬────────────────  
   │                      ╰────────────────── Error occurred here.
───╯
